# tree-maker

./: .gitignore  Cargo.toml  README.md
docs/: json_schema.md
inputs/: example.json
src/: config.rs  lib.rs  main.rs  tree.rs
